syntax = "proto3";

package proto;

option go_package = "proj/proto";

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  string name = 1;
  double balance = 2;
}

message GetRequest {
  string name = 1;
}

message GetResponse {
  string name = 1;
  double balance = 2;
}

message RenameRequest {
  string name = 1;
  string newName = 2;
}

message RenameResponse {
  string name = 1;
  string newName = 2;
}

message UpdateBalanceRequest {
  string name = 1;
  double balance = 2;
}

message UpdateBalanceResponse {
  string name = 1;
  double balance = 2;
}

message DeleteRequest {
  string name = 1;
}

message DeleteResponse {
  string name = 1;
}

service BankAccountService {
  rpc CreateServer(CreateRequest) returns (CreateResponse);
  rpc GetServer(GetRequest) returns (GetResponse);
  rpc RenameServer(RenameRequest) returns (RenameResponse);
  rpc UpdateBalanceServer(UpdateBalanceRequest) returns (UpdateBalanceResponse);
  rpc DeleteServer(DeleteRequest) returns (DeleteResponse);
}
